--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                     <div class="card product-card">
                         <img src="pic3.jpeg" class="card-img-top" alt="Product">
                         <div class="card-body">
-                            <h5 class="card-title">Product 1</h5>
-                            <p class="card-text">This is a brief description of Product 1.</p>
+                            <h5 class="card-title">Perfumes</h5>
+                            <p class="card-text">A delicate symphony of velvety jasmine and warm amber, this perfume envelopes you in timeless elegance, leaving a trail of irresistible allure. Each spritz whispers sophistication and endless romance.</p>
                             <p class="card-text fw-bold">$19.99</p>
                             <button class="btn btn-primary add-to-cart" data-price="19.99">Add to Cart</button>
                         </div>
@@ -82,8 +82,8 @@
                     <div class="card product-card">
                         <img src="pic1.jpeg" class="card-img-top" alt="Product">
                         <div class="card-body">
-                            <h5 class="card-title">Product 2</h5>
-                            <p class="card-text">This is a brief description of Product 2.</p>
+                            <h5 class="card-title">Watches</h5>
+                            <p class="card-text">Crafted with precision and timeless elegance, this watch blends sleek modern design with heritage craftsmanship. A statement of sophistication, it’s more than timekeeping—it’s a reflection of your style.</p>
                             <p class="card-text fw-bold">$29.99</p>
                             <button class="btn btn-primary add-to-cart" data-price="29.99">Add to Cart</button>
                         </div>
@@ -93,8 +93,8 @@
                     <div class="card product-card">
                         <img src="pic2.jpeg" class="card-img-top" alt="Product">
                         <div class="card-body">
-                            <h5 class="card-title">Product 3</h5>
-                            <p class="card-text">This is a brief description of Product 3.</p>
+                            <h5 class="card-title">Cosmetics</h5>
+                            <p class="card-text">Unveil your natural radiance with cosmetics crafted to enhance, not mask. From velvety textures to luminous finishes, every product is a celebration of beauty in its purest form.</p>
                             <p class="card-text fw-bold">$39.99</p>
                             <button class="btn btn-primary add-to-cart" data-price="39.99">Add to Cart</button>
                         </div>
