--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 E-Shop. All rights reserved.</p>
+            <p>&copy; 2025 My-Shop. All rights reserved.</p>
         </div>
     </footer>
 
