--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <h2 class="text-center mb-4">Your Cart</h2>
             <div id="cart-items" class="mb-3">Your cart is empty.</div>
             <div>
-                <h4>Total: $<span id="total-price">0.00</span></h4>
+                <h4>Total: PKR<span id="total-price">0.00</span></h4>
                 <button id="checkout-button" class="btn btn-success" disabled>Proceed to Payment</button>
             </div>
         </div>
