--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <section id="cart" class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center mb-4">Your Cart</h2>
-            <div id="cart-items" class="mb-3"></div>
+<!--             <div id="cart-items" class="mb-3"></div> -->
             <div>
                 <h4>Total: PKR<span id="total-price">0.00</span></h4>
                 <button id="checkout-button" class="btn btn-success" disabled>Proceed to Payment</button>
